# obs-prebuild

./: .gitattributes  .gitmodules  README.md
include/: obsconfig.h
includes/libobs/: obs-config.h
scripts/build-obs/: .gitignore  CMakeLists.txt  index.ts  package.json
